# pyOrigamiBreak

./: .gitignore  LICENSE  README.md  autobreak.py  ctk_autobreak.py  ctk_autostaple.py  ctk_exportoligos.py  exportoligos.py  origamidesign.py  pyproject.toml  scaffolds.py  utilities.py
autobreak/: autobreak.py  exportoligos.py  origamidesign.py  utilities.py  validate.py
scripts/: ligate_staple_breaks.py  make_scaffold_permutations.py  staple_csv_to_color_xlsx.py
