[project]
name = "pyOrigamiBreak"
version = "1.0.0"
authors = [
  {name = "Tural Aksel", email = "turalaksel@gmail.com"},
  {name = "Shawn Douglas", email = "shawn.douglas@ucsf.edu"},
]
description = "Python tool for auto-breaking DNA origami staples"
keywords = ["dna", "origami"]
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  'tk',
  'tqdm',
  'numpy',
  'pandas',
  'openpyxl',
  'matplotlib',
  'svgutils',
  'fastprogress',
  'cadnano @ git+https://github.com/douglaslab/cadnano2.5.git',
  'cn2svg @ git+https://github.com/douglaslab/cn2svg.git'
]

[project.urls]  # populates "Project links" on pypi.org page.
"Source" = "https://github.com/douglaslab/pyOrigamiBreak"
"Bug Reports" = "https://github.com/douglaslab/pyOrigamiBreak/issues"

[project.scripts]
# The following provides a command-line executable called `autobreak`
# which executes the function `main` from this package when invoked.
autobreak = "autobreak:autobreak.main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
